--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
-
+body {
+    background-color: #0a0a23;
+    color: #ffffff; /* Ensures text color is white for better readability */
+  }
+  
+  #text {
+    background-color: #0a0a23;
+    color: #ffffff;
+    padding: 10px;
+  }
+  
+  #game {
+    max-width: 500px;
+    background-color: #ffffff;
+    color: #0a0a23; /* Change color to ensure readability against white background */
+    margin: 30px auto;
+    padding: 10px;
+    border-radius: 10px; /* To give the game box rounded corners */
+  }
+  
+  #controls,
+  #stats {
+    border: 1px solid #0a0a23;
+    padding: 5px;
+    color: #0a0a23;
+    background-color: #ffffff; /* Ensures background color matches the game box */
+    border-radius: 5px; /* To give a slight round to the borders */
+    margin-bottom: 10px; /* To add some space between elements */
+  }
+  
+  #monsterStats {
+    display: none;
+    border: 1px solid #0a0a23;
+    padding: 5px;
+    color: #ffffff;
+    background-color: #c70d0d;
+    border-radius: 5px; /* To give a slight round to the borders */
+  }
+  
+  .stat {
+    padding-right: 10px;
+  }
+  
+  button {
+    cursor: pointer;
+    color: #0a0a23;
+    background-color: #feac32;
+    background-image: linear-gradient(#fecc4c, #ffac33);
+    border: 3px solid #feac32;
+    border-radius: 5px; /* To make buttons slightly rounded */
+    padding: 5px 10px; /* To add some padding inside buttons */
+  }
+  
