--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: linear-gradient(135deg, #a4a4a4, black); /* Red background */
     color: #ffffff;
-    position:center;
+    margin:auto;
   }
 
   
@@ -9,7 +9,7 @@ body {
     max-width: 500px;
     background-color: #0b159b; /* Blue game background */
     color: #ffffff;
-    margin: 30px auto;
+    margin: auto;
     padding: 20px;
     border-radius: 10px;
   }
@@ -40,7 +40,7 @@ body {
   .stat {
     padding-right: 10px;
     background-color:#ffea00;
-position:center;
+text-align:center;
   }
   
   #text {
@@ -56,5 +56,6 @@ position:center;
     font-weight: bold;
     background:#ffea00;
 position:center;
+text-align:center;
   }
 /*dark green theme*/
