--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: linear-gradient(135deg, #a4a4a4, black); /* Red background */
+    background-color:  #a4a4a4; 
     color: #ffffff;
     margin:auto;
   }
